{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 104,
  "lineage": "49dffa11-c393-4eae-5528-7b4abde9da06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036c46e875fcd2519",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0019de3d850a5efff",
            "domain": "vpc",
            "id": "eipalloc-036c46e875fcd2519",
            "instance": "i-0efd6dbf88434a2e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05178acc00d251110",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-219-27-51.compute-1.amazonaws.com",
            "public_ip": "44.219.27.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc67873410203528",
            "arn": "arn:aws:ec2:us-east-1:139366017033:instance/i-0efd6dbf88434a2e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0efd6dbf88434a2e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05178acc00d251110"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05178acc00d251110",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "44.219.27.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e6e4b3246153a902",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa66f71524e04ba5",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04020dc5e7f77b15f"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139366017033:internet-gateway/igw-038c55f0f87bd40a5",
            "id": "igw-038c55f0f87bd40a5",
            "owner_id": "139366017033",
            "vpc_id": "vpc-0c0d704830652daff"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139366017033:network-interface/eni-05178acc00d251110",
            "attachment": [
              {
                "attachment_id": "eni-attach-008679b7fd0d86551",
                "device_index": 0,
                "instance": "i-0efd6dbf88434a2e2"
              }
            ],
            "id": "eni-05178acc00d251110",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:8f:7d:b7:c3:c9",
            "owner_id": "139366017033",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04020dc5e7f77b15f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa66f71524e04ba5"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139366017033:route-table/rtb-05c297627e8a00ce4",
            "id": "rtb-05c297627e8a00ce4",
            "owner_id": "139366017033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038c55f0f87bd40a5",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038c55f0f87bd40a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0d704830652daff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a429a196e5e4de4",
            "route_table_id": "rtb-05c297627e8a00ce4",
            "subnet_id": "subnet-0fa66f71524e04ba5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47f534e13f694e1",
            "route_table_id": "rtb-05c297627e8a00ce4",
            "subnet_id": "subnet-0ded2b26e3d7da0a3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139366017033:security-group/sg-04020dc5e7f77b15f",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04020dc5e7f77b15f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "temp allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "139366017033",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0d704830652daff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139366017033:subnet/subnet-0fa66f71524e04ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa66f71524e04ba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "139366017033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet1"
            },
            "tags_all": {
              "Name": "prod-subnet1"
            },
            "vpc_id": "vpc-0c0d704830652daff"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139366017033:subnet/subnet-0ded2b26e3d7da0a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded2b26e3d7da0a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "139366017033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet2"
            },
            "tags_all": {
              "Name": "prod-subnet2"
            },
            "vpc_id": "vpc-0c0d704830652daff"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:139366017033:vpc/vpc-0c0d704830652daff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01768e113454f9e4f",
            "default_route_table_id": "rtb-02566d94322249786",
            "default_security_group_id": "sg-0e5377a93c6f56eb0",
            "dhcp_options_id": "dopt-058fede60db21303e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0d704830652daff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02566d94322249786",
            "owner_id": "139366017033",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}